netsuite/10.0/modules/ROOT/pages/netsuite-connector-xml-maven.adoc
= Netsuite - XML and Maven Support - Mule 4
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]

Although you can manually code a Mule app in XML, it is more efficient to use Anypoint Studio. When you install the connector in Studio, Studio automatically populates the XML code with the connector's namespace and schema location. It also adds a dependency to the `pom.xml` file.

If you manually code a Mule runtime engine (Mule) app in XML either from the Anypoint Studio XML editor or from a text editor, you can get access to the connector in your app by adding reference statements to both your XML Mule flow and the Apache Maven `pom.xml` file.

== Add a Namespace for the Connector

Paste the following code inside the `mule` tag of the header 
of your configuration XML:

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/netsuite 
http://www.mulesoft.org/schema/mule/netsuite/current/mule-netsuite.xsd
----

This example shows how the namespace statements are placed in the XML: 

[source,xml,linenums]
----
<mule xmlns:netsuite="http://www.mulesoft.org/schema/mule/netsuite" 
	xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns:file="http://www.mulesoft.org/schema/mule/file" 
	xmlns="http://www.mulesoft.org/schema/mule/core" 
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
	xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core 
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
	http://www.mulesoft.org/schema/mule/file 
	http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
	http://www.mulesoft.org/schema/mule/http 
	http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
	http://www.mulesoft.org/schema/mule/ee/core 
	http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
	http://www.mulesoft.org/schema/mule/netsuite 
	http://www.mulesoft.org/schema/mule/netsuite/current/mule-netsuite.xsd">
----


== Add a POM File Dependency 

The `pom.xml` Apache Maven file generated by Anypoint Studio contains dependencies for a Mule app. When you code a Mule app manually, include this XML snippet in your POM file to enable access to this connector:

[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-netsuite-connector</artifactId>
  <version>x.x.x</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Replace `x.x.x` with the version that corresponds to the connector you are using. 

To obtain the most up-to-date `pom.xml` file information:

. Go to https://www.mulesoft.com/exchange/[Anypoint Exchange].
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for `Netsuite`.
. Select the connector.
. Click *Dependency Snippets* near the upper right of the screen.

== Next Step

After completing your namespace and `pom.xml` file, you can try 
the xref:netsuite/netsuite-connector-examples.adoc[Examples].

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
